# Pirol

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README  README.md  revision.h.in.cmake
OLD/: Interpreter.cpp  Interpreter.h  InterpreterRunner.cpp  InterpreterRunner.h
cmake/: genrev.cmake  options.cmake
dep/: CMakeLists.txt
src/: CMakeLists.txt
src/Server/: CMakeLists.txt  Main.cpp  pirol.rc  webserver.conf.dist
src/Server/Cache/: Cache.cpp  Cache.h
src/Server/Interpreter/: Interpreter.cpp  Interpreter.h
src/Server/Misc/: Configuration.cpp  Configuration.h  Misc.h
src/Server/Network/Sockets/: ClientSocket.cpp  ClientSocket.h  ClientSocketAcceptor.h  ClientSocketMgr.cpp  ClientSocketMgr.h
src/Shared/: CMakeLists.txt
src/Shared/Debugging/: Errors.h
src/Shared/Logging/: Define.h  Log.cpp  Log.h
